IO tables production first

--- a/CGE_basedata.ipynb
+++ b/CGE_basedata.ipynb
@@ -2198,158 +2198,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# END OF PROGRAM"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "U = np.matrix(cleanData[\"usetable_BP\"].loc[COM][IND])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "VT = np.matrix(cleanData[\"supplytable_BP\"].loc[COM][IND])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 170,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "q = VT.sum(axis=1)\n",
-    "g = VT.sum(axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 163,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "B = VT.transpose() * np.linalg.inv(np.diagflat(q)) * U"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 171,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "C = VT * np.linalg.inv(np.diagflat(g))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 173,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "B2 = np.linalg.inv(C) * U"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 199,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "matrix([[ 3284.101,  1301.469,    77.089,  1222.688,  8906.267,\n",
-       "           827.501,  4561.121, 10153.171,   772.258,  8884.363,\n",
-       "          5705.588,   514.509,  2015.786,  1949.529,  7604.61 ,\n",
-       "          4280.559,  6366.438,  2791.05 ,  9865.115,  1065.498,\n",
-       "          1141.473,  1038.125,  1512.839,  4524.354,   285.674,\n",
-       "          1549.837, 17347.316,  2402.321,  6898.742,  5449.044,\n",
-       "          4716.05 ,  1618.597,  2232.58 ,  4404.461,   732.938,\n",
-       "          4112.18 ,  1705.521,   844.305,  2140.215,  4555.208,\n",
-       "          2720.794,  1017.453,  1200.934,  4986.227,  4218.543,\n",
-       "          2331.375,  2488.044,   572.829,   666.327,   782.925,\n",
-       "           914.147,   456.845,   557.409,  2347.105,  7660.92 ,\n",
-       "          3438.171,  6703.481,  2794.181,  1173.711,  1211.191,\n",
-       "          1667.795,   210.863,   679.168,     0.   ]])"
-      ]
-     },
-     "execution_count": 199,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "B.sum(axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 193,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "matrix([[ 4774.999,  4741.001,   201.   ,  1796.001, 11284.002,\n",
-       "          1210.   ,  5778.002, 13067.998,  1278.   ,  9475.001,\n",
-       "          7523.999,  1834.001,  3019.999,  2993.999,  8947.001,\n",
-       "          6687.002, 10563.002,  4572.   , 14282.001,  1520.998,\n",
-       "          1577.999,  1638.   ,  2846.001,  8898.   ,   690.   ,\n",
-       "          2908.999, 28832.   ,  5103.001, 14682.   , 11968.002,\n",
-       "          9904.001,  2463.   ,  2789.   ,  6659.   ,  1561.   ,\n",
-       "          7193.001,  3120.999,  1733.   ,  4294.999, 10010.001,\n",
-       "          5967.   ,  2799.   ,  2145.   , 12730.   , 19331.   ,\n",
-       "          5332.   ,  5605.001,  2235.   ,  1270.   ,  1425.   ,\n",
-       "          1715.   ,  2136.   ,   738.   ,  5766.001, 20087.999,\n",
-       "         14152.   , 17227.   , 11082.   ,  2359.   ,  2520.001,\n",
-       "          3837.   ,   404.   ,  1680.001,   243.   ]])"
-      ]
-     },
-     "execution_count": 193,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "VT.sum(axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 200,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "matrix([[6.59846258e+02, 5.95865727e+00, 8.30919939e-01, ...,\n",
-       "         2.75642782e-01, 7.24809210e+00, 0.00000000e+00],\n",
-       "        [7.47736954e+00, 7.34956818e+02, 8.19950947e-04, ...,\n",
-       "         1.07584852e-02, 9.89178580e-02, 0.00000000e+00],\n",
-       "        [1.92890065e-01, 2.00491644e-01, 5.21544331e+01, ...,\n",
-       "         4.75098683e-03, 1.61533552e-02, 0.00000000e+00],\n",
-       "        ...,\n",
-       "        [2.72340242e+00, 1.47627230e+00, 2.08832938e-02, ...,\n",
-       "         5.47933646e-01, 1.53326796e-01, 0.00000000e+00],\n",
-       "        [1.26865926e+00, 4.65208052e-01, 1.62786870e+00, ...,\n",
-       "         7.79411538e-02, 2.73894581e+01, 0.00000000e+00],\n",
-       "        [0.00000000e+00, 0.00000000e+00, 0.00000000e+00, ...,\n",
-       "         0.00000000e+00, 0.00000000e+00, 0.00000000e+00]])"
-      ]
-     },
-     "execution_count": 200,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "B"
+    "# Save basedata"
    ]
   },
   {
@@ -2358,6 +2207,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# END OF PROGRAM"
+   ]
   }
  ],
  "metadata": {
