--- a/IO_tables.ipynb
+++ b/IO_tables.ipynb
@@ -78,35 +78,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "matrix([[ 3284.101,  1301.469,    77.089,  1222.688,  8906.267,\n",
-       "           827.501,  4561.121, 10153.171,   772.258,  8884.363,\n",
-       "          5705.588,   514.509,  2015.786,  1949.529,  7604.61 ,\n",
-       "          4280.559,  6366.438,  2791.05 ,  9865.115,  1065.498,\n",
-       "          1141.473,  1038.125,  1512.839,  4524.354,   285.674,\n",
-       "          1549.837, 17347.316,  2402.321,  6898.742,  5449.044,\n",
-       "          4716.05 ,  1618.597,  2232.58 ,  4404.461,   732.938,\n",
-       "          4112.18 ,  1705.521,   844.305,  2140.215,  4555.208,\n",
-       "          2720.794,  1017.453,  1200.934,  4986.227,  4218.543,\n",
-       "          2331.375,  2488.044,   572.829,   666.327,   782.925,\n",
-       "           914.147,   456.845,   557.409,  2347.105,  7660.92 ,\n",
-       "          3438.171,  6703.481,  2794.181,  1173.711,  1211.191,\n",
-       "          1667.795,   210.863,   679.168,     0.   ]])"
-      ]
-     },
-     "execution_count": 199,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'U' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-89bccbe6d21e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mU\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'U' is not defined"
+     ]
     }
    ],
    "source": [
-    "B.sum(axis=0)"
+    "U"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
