IO_test national

--- a/CGE_capital_dynamics.ipynb
+++ b/CGE_capital_dynamics.ipynb
@@ -507,15 +507,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OK for Capital formation FP_prev_yr\n",
-      "OK for Capital formation FP_2010\n",
-      "OK for Capital formation 2017_prices\n",
       "OK for Capital formation CP\n",
-      "OK for Consumption and retirement FP_2010\n",
+      "OK for Capital formation 2017_prices\n",
+      "OK for Capital formation FP_2010\n",
+      "OK for Capital formation FP_prev_yr\n",
       "OK for Consumption and retirement CP\n",
-      "OK for Production accounts FP_prev_yr\n",
+      "OK for Consumption and retirement FP_2010\n",
+      "OK for Production accounts CP\n",
       "OK for Production accounts FP_2010\n",
-      "OK for Production accounts CP\n"
+      "OK for Production accounts FP_prev_yr\n"
      ]
     }
    ],
@@ -2012,6 +2012,13 @@
    "source": [
     "# END OF PROGRAM"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
