use table first ready

--- a/Read_har.ipynb
+++ b/Read_har.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,6 +230,252 @@
     "va_capital_obj = premod.getHeaderArrayObj(\"1CAP\")\n",
     "va_land_obj = premod.getHeaderArrayObj(\"1LND\")\n",
     "reg_use = ho.regUseTables(use_obj, va_labour_obj, va_capital_obj, va_land_obj)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(30, 30, 19)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "use_obj[\"array\"][:,0,0:len(va_labour_obj[\"sets\"][0][\"dim_desc\"]),:].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(19,)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "va_labour_obj[\"array\"].sum(axis = 1)[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>V1CAP</th>\n",
+       "      <th>V1LAB</th>\n",
+       "      <th>V1LND</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1011.159668</td>\n",
+       "      <td>26.842463</td>\n",
+       "      <td>1962.839355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1011.159668</td>\n",
+       "      <td>26.431602</td>\n",
+       "      <td>1962.839355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1011.159668</td>\n",
+       "      <td>20.211733</td>\n",
+       "      <td>1962.839355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1011.159668</td>\n",
+       "      <td>20.474222</td>\n",
+       "      <td>1962.839355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1011.159668</td>\n",
+       "      <td>41.073986</td>\n",
+       "      <td>1962.839355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1011.159668</td>\n",
+       "      <td>22.585562</td>\n",
+       "      <td>1962.839355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1011.159668</td>\n",
+       "      <td>21.044863</td>\n",
+       "      <td>1962.839355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1011.159668</td>\n",
+       "      <td>24.856659</td>\n",
+       "      <td>1962.839355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1011.159668</td>\n",
+       "      <td>64.058983</td>\n",
+       "      <td>1962.839355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1011.159668</td>\n",
+       "      <td>50.375271</td>\n",
+       "      <td>1962.839355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1011.159668</td>\n",
+       "      <td>44.201023</td>\n",
+       "      <td>1962.839355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1011.159668</td>\n",
+       "      <td>49.405197</td>\n",
+       "      <td>1962.839355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1011.159668</td>\n",
+       "      <td>26.226173</td>\n",
+       "      <td>1962.839355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1011.159668</td>\n",
+       "      <td>16.285799</td>\n",
+       "      <td>1962.839355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1011.159668</td>\n",
+       "      <td>8.684999</td>\n",
+       "      <td>1962.839355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>1011.159668</td>\n",
+       "      <td>44.931431</td>\n",
+       "      <td>1962.839355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>1011.159668</td>\n",
+       "      <td>22.790979</td>\n",
+       "      <td>1962.839355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>1011.159668</td>\n",
+       "      <td>30.037987</td>\n",
+       "      <td>1962.839355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>1011.159668</td>\n",
+       "      <td>3.480845</td>\n",
+       "      <td>1962.839355</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          V1CAP      V1LAB        V1LND\n",
+       "0   1011.159668  26.842463  1962.839355\n",
+       "1   1011.159668  26.431602  1962.839355\n",
+       "2   1011.159668  20.211733  1962.839355\n",
+       "3   1011.159668  20.474222  1962.839355\n",
+       "4   1011.159668  41.073986  1962.839355\n",
+       "5   1011.159668  22.585562  1962.839355\n",
+       "6   1011.159668  21.044863  1962.839355\n",
+       "7   1011.159668  24.856659  1962.839355\n",
+       "8   1011.159668  64.058983  1962.839355\n",
+       "9   1011.159668  50.375271  1962.839355\n",
+       "10  1011.159668  44.201023  1962.839355\n",
+       "11  1011.159668  49.405197  1962.839355\n",
+       "12  1011.159668  26.226173  1962.839355\n",
+       "13  1011.159668  16.285799  1962.839355\n",
+       "14  1011.159668   8.684999  1962.839355\n",
+       "15  1011.159668  44.931431  1962.839355\n",
+       "16  1011.159668  22.790979  1962.839355\n",
+       "17  1011.159668  30.037987  1962.839355\n",
+       "18  1011.159668   3.480845  1962.839355"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(\\\n",
+    "                                    {va_labour_obj[\"coeff_name\"].strip(): va_labour_obj[\"array\"].sum(axis = 1)[1],\\\n",
+    "                                     va_capital_obj[\"coeff_name\"].strip(): va_capital_obj[\"array\"].sum(axis = 1)[1],\\\n",
+    "                                     va_land_obj[\"coeff_name\"].strip(): va_land_obj[\"array\"].sum(axis = 1)[1]},\\\n",
+    "                                     )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(30,)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "va_land_obj[\"array\"][:,1].shape"
    ]
   },
   {
