--- a/CGE_regional_extension.ipynb
+++ b/CGE_regional_extension.ipynb
@@ -20,13 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Basic modules\n",
     "import pandas as pd\n",
     "import numpy  as np\n",
+    "import csv\n",
     "\n",
     "# HARPY module by Centre of Policy Studies for writing data into Header Array (HAR) format.\n",
     "# Available at https://github.com/GEMPACKsoftware/HARPY\n",
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +154,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 277,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Uusimaa'"
+      ]
+     },
+     "execution_count": 277,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "REGIONS['Uusimaa']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +254,7 @@
        "True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +382,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g=open(\"supplementaryData/Export_regional.csv\", 'r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 317,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reader=csv.reader(g, delimiter=';')\n",
+    "p={}\n",
+    "for row in reader:   \n",
+    "    p[row[0]]={'2013':row[1], '2014':row[2], '2015':row[3], '2016':row[4],  '2017':row[5]}\n",
+    "g.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regExports2 ={k:p[k][str(baseYear)] for k in REG}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
