--- a/CGE_regional_extension.ipynb
+++ b/CGE_regional_extension.ipynb
@@ -20,14 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Basic modules\n",
     "import pandas as pd\n",
     "import numpy  as np\n",
-    "import csv\n",
     "\n",
     "# HARPY module by Centre of Policy Studies for writing data into Header Array (HAR) format.\n",
     "# Available at https://github.com/GEMPACKsoftware/HARPY\n",
@@ -41,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,27 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Uusimaa'"
-      ]
-     },
-     "execution_count": 277,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "REGIONS['Uusimaa']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +233,7 @@
        "True"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 276,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,43 +361,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [],
    "source": [
-    "g=open(\"supplementaryData/Export_regional.csv\", 'r')"
+    "gg=pd.read_csv(\"supplementaryData/Export_regional.csv\", sep=';', encoding=\"ISO-8859-1\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [],
    "source": [
-    "reader=csv.reader(g, delimiter=';')\n",
-    "p={}\n",
-    "for row in reader:   \n",
-    "    p[row[0]]={'2013':row[1], '2014':row[2], '2015':row[3], '2016':row[4],  '2017':row[5]}\n",
-    "g.close()"
+    "g=gg.set_index('mk')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [],
    "source": [
-    "regExports2 ={k:p[k][str(baseYear)] for k in REG}"
+    "regExports ={k:g.loc[k][str(baseYear)] for k in REG}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export data from customs: (m€)\n",
-    "regExports ={\n",
+    "regExports2 ={\n",
     "\"Uusimaa\":      19522, \n",
     "\"VarsinSuomi\":  3806, \n",
     "\"Satakunta\":    3852, \n",
@@ -445,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,6 +714,13 @@
    "source": [
     "# END OF PROGRAM"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
