--- a/CGE_basedata.ipynb
+++ b/CGE_basedata.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,6 +32,7 @@
     "import numpy  as np # Python scientific computing package: http://www.numpy.org/\n",
     "import os           # Python operating system interface (for managing files and folders via this notebook)\n",
     "import re           # Python regular expressions (Perl-style regular expression patterns). E.g. for matching string patterns.\n",
+    "import pickle       # To save intermediate data as objects\n",
     "\n",
     "# HARPY module by Centre of Policy Studies. \n",
     "# Writes data from Python into Header Array (.har) format.\n",
@@ -278,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +488,7 @@
        "True"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -962,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +972,7 @@
        "True"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1042,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1104,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1130,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1167,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1192,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1279,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1301,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1319,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1336,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1347,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1357,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1372,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1396,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1426,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1440,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1454,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1476,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1545,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1564,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1575,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1593,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1612,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1628,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1646,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1661,7 +1662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1695,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1707,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1727,7 +1728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1748,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1776,7 +1777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1807,7 +1808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1835,7 +1836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1868,7 +1869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1877,7 +1878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1888,7 +1889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1908,7 +1909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1926,7 +1927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1946,7 +1947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1960,7 +1961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2198,7 +2199,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Save basedata"
+    "# Save clean/basedata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inter_folder = \"interdata\"\n",
+    "os.makedirs(inter_folder, exist_ok=True)\n",
+    "pickle.dump(cleanData, open(inter_folder+\"/cleanData.p\", \"wb\"))\n",
+    "\n",
+    "table_dims = {\"COM\": COM, \n",
+    "              \"IND\": IND,\n",
+    "              \"finUse\": finUse,\n",
+    "              \"valAdd\": valAdd,\n",
+    "              \"supComp\": supComp}\n",
+    "\n",
+    "pickle.dump(table_dims, open(inter_folder+\"/table_dims.p\", \"wb\"))"
    ]
   },
   {
