--- a/CGE_basedata.ipynb
+++ b/CGE_basedata.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,12 +609,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read in raw occupational data from MITENNA supplementary file:\n",
-    "OCC_levels = pd.read_excel(\"supplementaryData/MITENNA_OCC60.xlsx\")\n",
+    "OCC_levels = pd.read_excel(\"supplementaryData/MITENNA_\"+str(baseYear)+\".xlsx\", skiprows = 1, index_col = 0)\n",
     "OCC_levels.fillna(0, inplace=True)\n",
     "# Drop redundant columns:\n",
     "OCC_levels.drop([\"Missing data\", \"Grand total\"], axis = 1, inplace = True)\n",
@@ -626,15 +626,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dropped N  Administrative and support service activities with a total employment of 5.0 persons.\n",
-      "Dropped R  Arts, entertainment and recreation with a total employment of 1.0 persons.\n"
+      "Dropped N  Administrative and support service activities with a total employment of 9.0 persons.\n",
+      "Dropped R  Arts, entertainment and recreation with a total employment of 3.0 persons.\n"
      ]
     }
    ],
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
